--- a/CategoryProductSec.css
+++ b/CategoryProductSec.css
@@ -1,5 +1,5 @@
 
-/*main section styles*/
+/*Category  section styles*/
 .section{
     padding-top: 4rem;
 }
@@ -69,6 +69,8 @@
 
 }
 
+/*Product Section*/
+
 h2{
     font-size: 2rem;
     line-height: 4rem;
@@ -83,10 +85,13 @@ h2{
     margin: auto;
 }
 
+
 .card-container{
+   
     justify-content: center;
     margin-top: 3rem;
     text-align: center;
+   
 }
 
 .card{
@@ -96,17 +101,25 @@ h2{
     margin-bottom: 2rem;
     transition: all .3s ease-in-out;
     position: relative;
+    height: 400px;
 }
+
+
+
 
 .card:hover{
     box-shadow: 
     0px 5px 19px 1px rgba(36, 11, 12, .15);
     z-index: 3;
+    /
 }
 
-.card-container{
-    padding: 0 3rem;;
+.card-content{
+   
+     padding: 0 3rem;;
 }
+
+
 
 .title{
     font-size: 1rem;
@@ -114,6 +127,14 @@ h2{
     line-height: 1.7rem;
     font-weight: 500;
 }
+
+.card img {
+  width: 100%;
+  height: 250px;        /* fix card image height */
+  object-fit: cover;    /* crop to fit without distortion */
+  display: block;
+}
+
 
 .price{
     margin-top: 1rem;
@@ -138,6 +159,7 @@ del{
     visibility: hidden;
     transition:  all .3s ease-in-out;
 }
+
 .card:hover .add-to-cart{
     transform: translateY(0);
     opacity: 1;
@@ -151,15 +173,7 @@ del{
     left:20px;
     padding:.2rem 1.3rem;
     color: var(--white-clr);
-    font-weight: 400
-    
-    3
-    
-    
-    
-    
-    
-    ;
+    font-weight: 300;
 }
 
 .new::before{
