your teamtes changes description

--- a/NavSection.css
+++ b/NavSection.css
@@ -64,7 +64,10 @@ img{
 .wrap{
     flex-wrap: wrap;
 }
-
+.secondary-bg{
+    background: var(--secondary-clr);
+    padding-block: 2.2rem;
+}
 
 
 
