--- a/latest.css
+++ b/latest.css
@@ -1,29 +1,72 @@
-.blog_container{
-    margin-top: 3rem;
+/* Ensure container displays items in a row */
+.blog-container {
     gap: 2rem;
+  margin-top: 3rem;
 }
 
-.blog-box{
-      flex: 1;
+.blog-box {
+  position: relative; /* important for absolute children */
+  flex: 1;
 }
 
-.blog-box::before{
-    content: '';
-    position: absolute;
-    background: rgba(0,0,0,.5);
-    top: 0;
-    left: 0;
+
+/* Overlay background */
+.blog-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, .8);
+  z-index: 3;
+  transition: all .3s ease-in-out;
+}
+
+.blog-box:hover::before{
     width: 100%;
-    height: 100%;
-    z-index: 3;
 }
-.blog-content{
-    position:absolute;
-    top: 50%;
+
+/* Content centered over image */
+.blog-content {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  padding-inline: 2rem;
+  z-index: 4; /* above overlay */
+  opacity: 0;
+  visibility: hidden;
+  transition:all .3s ease-in-out ;
+}
+
+.heading{
+    font-size: 1.7rem;
+    line-height: 4rem;
+    font-weight:500 ;
+}
+
+.blog-content *{
+    color:var(--secondary-clr);
+
+}
+
+.blog-link {
+    font-size: .9rem;
+    font-weight: 500;
+    line-height: 5rem;
+    color: var(--primary-clr);
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-transform: uppercase;
+  
+}
+
+.blog-box:hover .blog-content{
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    text-align: center;
-    z-index: 4;
+    opacity: 1;
+    visibility: visible;
 
 }
